# AgenticAIRetail

./: .env.example  .gitignore  ProjectDocument.md  README.md  app.py  architecture.md  diagram.mmd  pyproject.toml  requirements.txt
agent/: graph.py  mcp_client.py  mcp_server.py  state.py  tools.py
data/chroma_store/: chroma.sqlite3
memory/: chroma_store.py
utils/: callbacks.py  firebase_store.py  pinecone_store.py
